# Heres

animo/: .gitignore  README.md  docker-compose.yml  requirements.txt
animo/anima/analysis/sentiment/: analyzer.py
animo/anima/data_processing/: pipeline.py
animo/anima/scrapers/: base.py  sec_edgar.py
animo/config/: settings.py
animo/docker/: Dockerfile
animo/examples/: basic_analysis.py
animo/tests/: test_sec_edgar_scraper.py
esurio/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
esurio/config/: base_config.yaml  scraping_targets.yaml
esurio/src/common/: config.py  logging_util.py
esurio/src/db/: README.md  models.py  session.py
esurio/src/processing/: processor_manager.py
esurio/src/processing/processors/: README.md  base_processor.py  economic_processor.py  market_processor.py  news_processor.py  social_processor.py  supply_processor.py
esurio/src/processing/quant/: README.md  backtester.py  coordinator.py  insight_generator.py  llm_bridge.py  mathematical_core.py  neural_architectures.py  optimizer.py  risk_manager.py  strategy_generator.py
esurio/src/scraping/: runner.py
esurio/src/scraping/spiders/: README.md  base_spider.py  crypto_spider.py  earnings_spider.py  economic_spider.py  market_spider.py  news_spider.py  social_spider.py  supply_spider.py
esurio/tests/: test_base_spider.py
